--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipeline-performance-analyzer",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "engines": {
@@ -17,6 +17,7 @@
   "dependencies": {
     "@coreui/coreui": "^5.4.3",
     "@coreui/vue": "^5.7.0",
+    "@coreui/vue-chartjs": "^3.0.0",
     "bootstrap": "^5.3.8",
     "graphql": "^16.12.0",
     "graphql-request": "^7.3.5",
