--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@coreui/coreui": "^5.4.3",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-vue": "^2.2.0",
     "@coreui/vue": "^5.7.0",
     "@coreui/vue-chartjs": "^3.0.0",
     "bootstrap": "^5.3.8",
